--- a/portfolio.html
+++ b/portfolio.html
@@ -1,202 +1,238 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Портфолио</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-  <body>
-    <!--Шапка сайта-->
-    <header class="header">
-      <div class="container portfolio-header">
-        <nav class="header-nav">
-          <a href="./index.html" class="header-logo link">
-            Web<span class="accent-header-logo">Studio</span></a
-          >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a href="./index.html" class="header-link link">Студия</a>
-            </li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="header-link current link">Портфолио</a>
-            </li>
-            <li class="header-item"><a href="#contacts" class="header-link link">Контакты</a></li>
-          </ul>
-        </nav>
-        <div class="header-connect">
-          <ul class="header-contacts list">
-            <li>
-              <a href="mailto:info@example.com" class="header-email link">info@example.com</a>
-            </li>
-            <li>
-              <a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+<body>
+  <!--Шапка сайта-->
+  <header class="header web-portfolio">
+    <div class="container portfolio-header">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo link">
+          Web<span class="accent-header-logo">Studio</span></a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="./index.html" class="header-link link">Студия</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link current link">Портфолио</a>
+          </li>
+          <li class="header-item"><a href="#contacts" class="header-link link">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="header-connect">
+        <ul class="header-contacts list">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="header-email link">
+              <svg class="header-icons" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="header-tel link">
+              <svg class="header-icons" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <!--Основная информация-->
-    <main>
-      <section>
-        <div class="container portfolio">
-          <h1 hidden class="visually-hidden">WebStudio Портфолио</h1>
-          <ul class="buttons list">
-            <li class="button-item">
-              <button type="button" class="portfolio-button current-btn">Все</button>
-            </li>
-            <li class="button-item">
-              <button type="button" class="portfolio-button">Веб-сайты</button>
-            </li>
-            <li class="button-item">
-              <button type="button" class="portfolio-button">Приложения</button>
-            </li>
-            <li class="button-item">
-              <button type="button" class="portfolio-button">Дизайн</button>
-            </li>
-            <li class="button-item">
-              <button type="button" class="portfolio-button">Маркетинг</button>
-            </li>
-          </ul>
+  <!--Основная информация-->
+  <main>
+    <section class="section portfolio">
+      <div class="container portfolio">
+        <h1 hidden class="visually-hidden">WebStudio Портфолио</h1>
+        <ul class="buttons list">
+          <li class="button-item">
+            <button type="button" class="portfolio-button current-btn">Все</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="portfolio-button">Веб-сайты</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="portfolio-button">Приложения</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="portfolio-button">Дизайн</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="portfolio-button">Маркетинг</button>
+          </li>
+        </ul>
 
-          <ul class="portfolio list">
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-1.jpg" alt="Технокряк" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title">Технокряк</h2>
-                  <p class="portfolio-item">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
+        <ul class="portfolio list">
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-1.jpg" alt="Технокряк" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-item">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img
-                  src="./images/portfolio-img-2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
-                <div class="item-description">
-                  <h2 class="portfolio-title">
-                    Постер <span lang="en">Orlean vs Golden Star</span>
-                  </h2>
-                  <p class="portfolio-item">Дизайн</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">
+                  Постер <span lang="en">Orlean vs Golden Star</span>
+                </h2>
+                <p class="portfolio-item">Дизайн</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-3.jpg" alt="Ресторан Seafood" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
-                  <p class="portfolio-item">Приложение</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-3.jpg" alt="Ресторан Seafood" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="portfolio-item">Приложение</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-4.jpg" alt="Проект Prime" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
-                  <p class="portfolio-item">Маркетинг</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-4.jpg" alt="Проект Prime" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
+                <p class="portfolio-item">Маркетинг</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-5.jpg" alt="Проект Box" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
-                  <p class="portfolio-item">Приложение</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-5.jpg" alt="Проект Box" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="portfolio-item">Приложение</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img
-                  src="./images/portfolio-img-6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                />
-                <div class="item-description">
-                  <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
-                  <p class="portfolio-item">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-6.jpg" alt="Inspiration has no Borders" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+                <p class="portfolio-item">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-7.jpg" alt="Издание Limited Edition" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
-                  <p class="portfolio-item">Дизайн</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-7.jpg" alt="Издание Limited Edition" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="portfolio-item">Дизайн</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-8.jpg" alt="Проект LAB" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title">Проект <span lang="en" class="abbr">LAB</span></h2>
-                  <p class="portfolio-item">Маркетинг</p>
-                </div>
-              </a>
-            </li>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-8.jpg" alt="Проект LAB" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title">Проект <span lang="en" class="abbr">LAB</span></h2>
+                <p class="portfolio-item">Маркетинг</p>
+              </div>
+            </a>
+          </li>
 
-            <li class="portfolio-items">
-              <a href="" class="items link">
-                <img src="./images/portfolio-img-9.jpg" alt="Growing Business" width="370" />
-                <div class="item-description">
-                  <h2 class="portfolio-title" lang="en">Growing Business</h2>
-                  <p class="portfolio-item">Приложение</p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
+          <li class="portfolio-items">
+            <a href="" class="items link">
+              <img src="./images/portfolio-img-9.jpg" alt="Growing Business" width="370" />
+              <div class="item-description">
+                <h2 class="portfolio-title" lang="en">Growing Business</h2>
+                <p class="portfolio-item">Приложение</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
 
-    <!--Подвал сайта-->
-    <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="accent-footer-logo">Studio</span></a
-        >
+  <!--Подвал сайта-->
+  <footer class="footer">
+    <div class="container footer-inf">
+      <div class="contact-inf">
+        <a href="./index.html" class="footer-logo link">Web<span class="accent-footer-logo">Studio</span></a>
 
         <address id="contacts" class="footer-contacts">
           <ul class="footer-list list">
-            <li><a href="" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li>
+            <li class="item">
+              <a href="" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="item">
               <a href="mailto:info@example.com" class="footer-email link">info@example.com</a>
             </li>
-            <li><a href="tel:+380991111111" class="footer-tel link">+38 099 111 11 11</a></li>
+            <li class="item">
+              <a href="tel:+380991111111" class="footer-tel link">+38 099 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
-    </footer>
-  </body>
+
+      <div class="contact-soc">
+        <p class="contact-text">
+          <strong>Присоединяйтесь</strong>
+        </p>
+        <ul class="footer-soc-list list">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
