--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button " class="hero-button" data-modal-open>
-            Заказать услугу
-          </button>
+          <button type="button " class="hero-button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -89,8 +87,7 @@
               </div>
               <h3 class="benefits-title">Внимание к деталям</h3>
               <p class="benefits-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
 
@@ -102,8 +99,7 @@
               </div>
               <h3 class="benefits-title">Пунктуальность</h3>
               <p class="benefits-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
 
@@ -115,8 +111,7 @@
               </div>
               <h3 class="benefits-title">Планирование</h3>
               <p class="benefits-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
 
@@ -128,8 +123,7 @@
               </div>
               <h3 class="benefits-title">Современные технологии</h3>
               <p class="benefits-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
           </ul>
@@ -143,33 +137,21 @@
           <ul class="services-list list">
             <li class="services-item">
               <div class="services-thumb">
-                <img
-                  src="./images/services-img-1.jpg"
-                  alt="Вёрстка веб-страниц"
-                  width="370"
-                />
+                <img src="./images/services-img-1.jpg" alt="Вёрстка веб-страниц" width="370" />
                 <p class="services-lable">Десктопные приложения</p>
               </div>
             </li>
 
             <li class="services-item">
               <div class="services-thumb">
-                <img
-                  src="./images/services-img-2.jpg"
-                  alt="Создание адаптивов"
-                  width="370"
-                />
+                <img src="./images/services-img-2.jpg" alt="Создание адаптивов" width="370" />
                 <p class="services-lable">Мобильные приложения</p>
               </div>
             </li>
 
             <li class="services-item">
               <div class="services-thumb">
-                <img
-                  src="./images/services-img-3.jpg"
-                  alt="Дизайн приложений"
-                  width="370"
-                />
+                <img src="./images/services-img-3.jpg" alt="Дизайн приложений" width="370" />
                 <p class="services-lable">Дизайнерские решения</p>
               </div>
             </li>
@@ -183,11 +165,7 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-items">
-              <img
-                src="./images/team-img-1.jpg"
-                alt="Продакт дизайнер"
-                width="270"
-              />
+              <img src="./images/team-img-1.jpg" alt="Продакт дизайнер" width="270" />
               <div class="team-content">
                 <h3 class="team-member">Игорь Демьяненко</h3>
                 <p lang="en" class="team-item">Product Designer</p>
@@ -225,11 +203,7 @@
             </li>
 
             <li class="team-items">
-              <img
-                src="./images/team-img-2.jpg"
-                alt="Фронтенд разработчик"
-                width="270"
-              />
+              <img src="./images/team-img-2.jpg" alt="Фронтенд разработчик" width="270" />
               <div class="team-content">
                 <h3 class="team-member">Ольга Репина</h3>
                 <p lang="en" class="team-item">Frontend Developer</p>
@@ -305,11 +279,7 @@
             </li>
 
             <li class="team-items">
-              <img
-                src="./images/team-img-4.jpg"
-                alt="Дизайнер интерфейса"
-                width="270"
-              />
+              <img src="./images/team-img-4.jpg" alt="Дизайнер интерфейса" width="270" />
               <div class="team-content">
                 <h3 class="team-member">Михаил Ермаков</h3>
                 <p lang="en" class="team-item">UI Designer</p>
@@ -412,19 +382,13 @@
           <address id="contacts" class="footer-contacts">
             <ul class="footer-list list">
               <li class="item">
-                <a href="" class="footer-address link"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+                <a href="" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
               </li>
               <li class="item">
-                <a href="mailto:info@example.com" class="footer-email link"
-                  >info@example.com</a
-                >
+                <a href="mailto:info@example.com" class="footer-email link">info@example.com</a>
               </li>
               <li class="item">
-                <a href="tel:+380991111111" class="footer-tel link"
-                  >+38 099 111 11 11</a
-                >
+                <a href="tel:+380991111111" class="footer-tel link">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
